test/ui/tests/parsing/outdented-bracket.stderr
error[E010]: found keyword `case`, but expected word
 --> ${DIRECTORY}/parsing/outdented-bracket.lushui:4:23
  |
4 | lengthy-space-filler (case 0 of
  |                       ^^^^ unexpected token
  |

error: aborting due to previous error
 note: the error E010 has a detailed explanation
 help: run `lushui explain E010` to view it

